logo in fixed position on mobile

--- a/style.css
+++ b/style.css
@@ -297,9 +297,7 @@ h1 {
         margin:0 !important; 
     }
   
-     #about-container, 
-     #porfolio-container{
-     }
+
      
      /* div {
          display: inline-block;
@@ -330,25 +328,22 @@ h1 {
         min-width:350px;
         max-width:350px;
     }
-   {
-    }
+   
+    
     .logo {
         width:85px;
         height:85px;
         text-align:center;
         margin-bottom:15px;
-        position:fixed;
 
     }
     
     .logo a {
-        display:block;
-        border:none;
-        text-decoration: none;
         width:85px;
         height:85px;
-        background: url(images/logo.png) no-repeat center;
         background-size: 80px 80px;
+        position:fixed;
+
     }
 
     
